--- a/style.css
+++ b/style.css
@@ -75,7 +75,10 @@ body {
     -webkit-box-shadow: 0 0px 5px #888;
     -moz-box-shadow: 0 0px 5px #888;
     box-shadow: 0 0px 5px #888;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
 }
+    
 #content h2 {
     color: #fff;
     text-shadow: 0 1px 0 #000;
